# ptz-joystick-controller

./: .gitignore  README.md  config.example.yaml  config.example.yaml.old  config.local.example.yaml  config.local.yaml.bak  config.schema.yaml  pyproject.toml  requirements.txt
docs/: implementation-stage-1.md  joystick-mapping.md
scripts/: manual_joystick_test.py  manual_joystick_vmix_bridge.py  manual_joystick_vmix_ptz_end_to_end.py  manual_joystick_vmix_ptz_simulation.py  manual_ptz_preset_recall.py  manual_status_dashboard.py  manual_visca_single_camera.py  manual_vmix_integration.py
tests/: conftest.py  test_atomic_save_load.py  test_config_schema.py  test_joystick_abstraction.py  test_joystick_dispatcher.py  test_joystick_mapping.py  test_joystick_runtime_output.py  test_joystick_vmix_bridge.py  test_last_preset.py  test_real_joystick_runtime.py  test_source_mapping.py  test_stage15_joystick_ptz_routing.py  test_stage16_real_visca_transport.py  test_stage17_real_joystick_ptz_control.py  test_stage19_hat_stop_and_fine_speed.py  test_stage20_independent_ptz_stop_tracking.py  test_stage21_hat_8way_preview_stop.py  test_stage22_pan_tilt_arbitration.py  test_stage23_config_local_overrides.py  test_stage24_ptz_preset_recall.py  test_stage25_button_metadata.py  test_stage26_axis_inversion_metadata.py  test_stage27_ptz_runaway_safety.py  test_stage28_hat_left_diagonal_fix.py  test_stage29_webui_dashboard.py  test_stage30_runtime_dashboard_integration.py  test_stage31_dashboard_joystick_disconnect.py  test_stage32_windows_pygame_disconnect.py  test_stage34_config_page.py  (+12 more)
(+79 files in other folders)
