[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ptz-joystick-controller"
version = "0.1.0"
description = "Backend skeleton for PTZ Joystick Controller appliance"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "pydantic>=2.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
