[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ptz-joystick-controller"
version = "0.1.0"
description = "Backend skeleton for PTZ Joystick Controller appliance"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "pydantic>=2.0", "fastapi>=0.110", "uvicorn>=0.27", "httpx2"]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx2"]
linux-joystick = ["evdev>=1.7"]
windows-joystick = ["pygame>=2.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
